# temper

./: .clang-tidy  .gitattributes  .gitignore  .travis.yml  CODE_OF_CONDUCT.md  ChangeLog.md  Makefile.in  README.md  config.h  config.h.in  configure  configure.ac  lgtm.yml  meson.build  temper.tgz
.circleci/: config.yml
.github/: CODEOWNERS  CONTRIBUTING.md
.github/workflows/: ccpp.yml
cov-int/: BUILD.metrics.xml  build-cwd.txt  build-id.txt  build-log.txt  build-timings.txt  emit-db-cache
cov-int/emit/oxide.local/config/cef8933392db34f8e7517e6fa152a2fd/: coverity_config.xml  coverity_config_created
cov-int/emit/oxide.local/config/cef8933392db34f8e7517e6fa152a2fd/clangcxx-config-0/: coverity-compiler-compat.h  coverity-macro-compat.h  coverity_config.xml
cov-int/emit/oxide.local/config/cef8933392db34f8e7517e6fa152a2fd/clangcxxcc-config-0/: coverity-compiler-compat.h  coverity-macro-compat.h  coverity_config.xml
cov-int/emit/oxide.local/config/cef8933392db34f8e7517e6fa152a2fd/clangobjc-config-0/: coverity-compiler-compat.h  coverity-macro-compat.h  coverity_config.xml
cov-int/emit/oxide.local/config/cef8933392db34f8e7517e6fa152a2fd/clangobjcxx-config-0/: coverity-compiler-compat.h  coverity-macro-compat.h  coverity_config.xml
src/: Makefile.am  Makefile.in  conversions.c  conversions.cpp  conversions.h  conversions.hpp  coverity_model.c  license.c  license.cpp  license.h  license.hpp  meson.build  temper.c  temper.cpp  temper.hpp
test/: Makefile  meson.build  run-tests.sh
test/scripts/: meson.build  run-tests.sh  temper_cli_tests
test/src/: catch.hpp  meson.build  temper-test.c  temper-test.cpp
tests/: .gitignore  Makefile.am  absolute_zero.test  check_conversions.c  configure.ac
